Fix swag
